--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
     <div class="container">
         <h1>Grinnell SMP</h1>
-        <p>Grinnell SMP is a simple vanilla server without any significant mods blah blah blah have fun</p>
+        <p>Grinnell SMP is a simple vanilla minecraft server without any significant mods blah blah blah have fun</p>
 
         <h2>Installation</h2>
         <ol>
