--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <li>You can now start the instance and play on the server!</li>
             <li>If Prism Launcher asks you for an account, you can add either Microsoft (if you have the license) or offline (you will still be able to play online)</li>
             <li>The server should be already in the server list automatically; if it isn't, just use <strong>grinnell.fun</strong> as the IP</li>
+            <li><strong>WHEN PLAYING FOR THE FIRST TIME DON'T FORGET TO CONFIGURE VOICE CHAT BY PRESSING 'V'</strong></li>
         </ol>
 
         <div class="contact">
