Add whitelist info

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
     <div class="container">
         <h1>Grinnell SMP</h1>
         <p>Grinnell SMP is a simple vanilla minecraft server without any significant mods blah blah blah have fun</p>
+        <h2>WHITELIST</h2>
+        <p>Get whitelisted by joining our discord server and following the instructions there: <a href="https://discord.gg/rVrkBn3vJB" target="_blank" rel="noopener noreferrer">Grinnell Unhinged Discord</a></p>
+        <p style="font-size: 0.8em;">or just ask me directly</p>
 
         <h2>Installation</h2>
         <ol>
